# evospec

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  evospec.yaml  pyproject.toml
.agents/skills/evospec-adr/: SKILL.md
.agents/skills/evospec-capture/: SKILL.md
.agents/skills/evospec-check/: SKILL.md
.agents/skills/evospec-contract/: SKILL.md
.agents/skills/evospec-discover/: SKILL.md
.agents/skills/evospec-fix/: SKILL.md
.agents/skills/evospec-implement/: SKILL.md
.agents/skills/evospec-improve/: SKILL.md
.agents/skills/evospec-learn/: SKILL.md
.agents/skills/evospec-tasks/: SKILL.md
.cursor/rules/: evospec-adr.mdc  evospec-capture.mdc  evospec-check.mdc  evospec-contract.mdc  evospec-discover.mdc  evospec-fix.mdc  evospec-implement.mdc  evospec-improve.mdc  evospec-learn.mdc  evospec-tasks.mdc  evospec.mdc
.github/: pull_request_template.md
.windsurf/workflows/: evospec.adr.md  evospec.capture.md  evospec.check.md  evospec.contract.md  evospec.discover.md  evospec.fix.md  evospec.implement.md  evospec.improve.md  evospec.learn.md  evospec.tasks.md
docs/: COMPARISON.md  getting-started.md
docs/adr/: 0001-adopt-evospec.md
examples/: README.md  evospec.yaml
examples/docs/adr/: 0002-use-event-sourcing.md
examples/evospec-structure/: README.md  evospec.yaml
examples/multi-system-ux-discovery/: README.md  WALKTHROUGH.md  evospec.yaml
examples/order-management/: spec.yaml
examples/orders-system/: README.md  evospec.yaml  order-response.json
examples/smart-recommendations/: spec.yaml
schemas/: spec.schema.json
specs/_templates/: CLAUDE.md  adr.md  discovery-spec.md  domain-contract.md  tasks.md
specs/domain/: context-map.md  contexts.yaml  entities.yaml  features.yaml  glossary.md
src/evospec/: __init__.py
tests/: __init__.py  test_agents.py  test_capture.py  test_cli.py  test_config.py  test_consumer_mcp.py  test_deep_reverse.py  test_deprecation.py  test_journey_gaps.py  test_mcp_skills.py  test_prompt.py  test_relational_invariants.py  test_sync.py  test_verify.py
(+142 files in other folders)
